Login, Logout and BBDD
Axios + MySQL

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Yellow_Comet"
+      content="Yellow_Comet Website"
     />
     <script src="https://use.fontawesome.com/releases/v6.5.2/js/all.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
